--- a/sass/_modals.sass
+++ b/sass/_modals.sass
@@ -128,7 +128,7 @@
   float: right
   width: 230px
   height: 1.5 * $baseLineHeight
-  margin: 35px 0 7px
+  margin: 25px 0 7px
   +border-radius(18px)
   &::-webkit-search-decoration
     -webkit-appearance: searchfield-decoration
@@ -175,7 +175,7 @@
 
 #currentFriendsHeading
   +bold
-  margin: 40px 0 0 13px
+  margin: 30px 0 0 13px
   padding: 0 5px 2px
   border-bottom: 1px solid $infoText
   float: left
